infra/k8s/eventlogger-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: eventlogger-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: eventlogger
  template:
    metadata:
      labels:
        app: eventlogger
    spec:
      containers:
        - name: eventlogger
          image: travism26/eventlogger # Change this to your dockerhub username / image name
---
apiVersion: v1
kind: Service
metadata:
  name: eventlogger-srv
spec:
  selector:
    app: eventlogger
  ports:
    - name: eventlogger
      protocol: TCP
      port: 3000
      targetPort: 3000
