infra/k8s/ingress-srv.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: 'true'
spec:
  # tls:
  #   - hosts:
  #       - example-app.com
  rules:
    - host: example-app.com
      http:
        paths:
          - path: /api/auth/?(.*)
            pathType: Prefix
            backend:
              service:
                name: auth-srv
                port:
                  number: 3000
          - path: /api/user/?(.*)
            pathType: Prefix
            backend:
              service:
                name: user-srv
                port:
                  number: 3000
          - path: /?(.*) # THIS NEEDS TO BE LAST! Catch all other paths, ideally for the client service (React app)
            pathType: Prefix
            backend:
              service:
                name: client-srv
                port:
                  number: 3000
